# WMW-2.0

./: .gitignore  CHANGELOG.md  CMakeLists.txt  appveyor.yml  readme.md
Installers/Windows/NSIS/: WMVInstallerMUI.nsi
Source/core/: CMakeLists.txt  CharInfos.cpp  CharInfos.h  GameDatabase.cpp  GameDatabase.h  GameFolder.cpp  GameFolder.h  GlobalSettings.cpp  GlobalSettings.h
Source/core/metaclasses/: Observable.cpp
Source/games/wow/: Bone.cpp  CASCFolder.cpp  CASCFolder.h  CMakeLists.txt  CharDetails.cpp  CharDetails.h  CharTexture.cpp  ModelRenderPass.cpp  ModelRenderPass.h  RaceInfos.cpp  RaceInfos.h  WMOGroup.cpp  WMOGroup.h  WMOModelInstance.cpp  WMOModelInstance.h  WoWDatabase.cpp  WoWDatabase.h  WoWFolder.cpp  WoWItem.cpp  WoWModel.cpp  WoWModel.h  animated.h  dbdfile.cpp  dbdfile.h  particle.cpp  particle.h  types.h  video.h  wdc3file.cpp  wdc3file.h  wmo.cpp  wmo.h
Source/plugins/: CMakeLists.txt
Source/plugins/exporters/fbx/: CMakeLists.txt
Source/plugins/importers/armory/: ArmoryImporter.cpp  CMakeLists.txt
Source/plugins/importers/wowhead/: WowheadImporter.cpp
Source/wowmodelviewer/: CMakeLists.txt  CharDetailsCustomizationChoice.cpp  CharDetailsCustomizationChoice.h  CharDetailsFrame.cpp  ClientChoiceDialog.cpp  ClientChoiceDialog.h  GeneralSettings.cpp  GeneralSettings.h  LoadingDialog.cpp  LoadingDialog.h  OrbitCamera.cpp  OrbitCamera.h  Quantize.cpp  SettingsControl.cpp  animcontrol.cpp  app.cpp  app.h  charcontrol.cpp  enums.h  filecontrol.cpp  filecontrol.h  itemselection.cpp  lightcontrol.cpp  modelcanvas.cpp  modelviewer.cpp  modelviewer.h  util.cpp  wmv.rc
armory-proxy/: .gitignore  README.md  api.php  cloudflare-worker.js
bin_support/wow/10.1/: database.xml
bin_support/wow/12.0/: AnimationData.csv  database.xml
cmake/: common.cmake
doc/: buildnotes.txt
installer/: WoWModelViewerMidnight.iss
scripts/: gen_animnames.js
